LPS-44102 Prevent whitespace wrapping

--- a/portal-web/docroot/html/css/portal/tag_selector.css
+++ b/portal-web/docroot/html/css/portal/tag_selector.css
@@ -5,6 +5,10 @@
 	border-width: 0 1px 1px;
 	margin-bottom: 0.5em;
 
+	fieldset {
+		white-space: nowrap;
+	}
+
 	li {
 		&.tree-node .tree-node-content {
 			@include ellipsis;
